# iteration_final_project

./: .gitignore  CMakeLists.txt  Makefile  README.md  README_IMPLEMENTATION.md  build.bat  build.sh  red_black_gauss_seidel.cpp  red_black_gauss_seidel.h  test_correctness.cpp  test_performance.cpp  test_speed.cpp  性能测试数据表格（Markdown格式）.md  期末论文_并行算法实现与性能分析.md  迭代方法大作业封面2025.docx
gauss_seidel/: CONVERGENCE_ANALYSIS.md  MEMORY_OPTIMIZATION_REPORT.md  MULTITHREAD_ANALYSIS.md  Makefile  OPTIMIZATION_GUIDE.md  PARALLEL_PERFORMANCE_ANALYSIS.md  PERFORMANCE_FIX_REPORT.md  QUICK_START.md  README.md  SIMD_OPTIMIZATION_GUIDE.md  TEST_GUIDE.md  TEST_SCRIPT_README.md  batch_test_all.ps1  gauss_seidel_2d.cpp  gauss_seidel_2d.h  gauss_seidel_2d_mt_optimized.cpp  gauss_seidel_2d_mt_optimized.h  gauss_seidel_2d_optimized.cpp  gauss_seidel_2d_optimized.h  gauss_seidel_2d_tiled.cpp  gauss_seidel_2d_tiled_aligned.cpp  gauss_seidel_3d.cpp  gauss_seidel_3d.h  gauss_seidel_3d_tiled.cpp  gauss_seidel_3d_tiled_aligned.cpp  quick_test_2d.ps1  quick_test_3d.ps1  quick_test_fixed.ps1  quick_test_tiled.ps1  run_batch_background.ps1  test_all.ps1  test_gs_2d.cpp  test_gs_2d_batch.cpp  test_gs_2d_batch.ps1  test_gs_3d.cpp  test_gs_3d_batch.cpp  test_gs_3d_batch.ps1  test_memory_opt_cn.ps1  test_memory_opt_windows.ps1  test_memory_optimization.cpp  (+11 more)
latex/: SJTUReport.sty  get_system_info.ps1  main.tex
new_tri/: Makefile  README.md  batch_test_all.ps1  batch_test_memtest.ps1  openmp_brugnano.cpp  openmp_brugnano_memtest.cpp  openmp_recursive_doubling.cpp  openmp_recursive_doubling_memtest.cpp  (+5 more)
(+120 files in other folders)
